2022-02-28 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asz80/z80adr.c,
	  sdas/asz80/z80mch.c:
	  Merge error messages from upstream ASxxxx 5.40.
	  Add a few for extensions/custom ports. Part 2.

2022-02-27 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/ralloc.c,
	  sdcc/src/mos6502/gen.c:
	  Remove freeAllRegs()
  	* sdcc/src/mos6502/gen.c:
  	  Fix corner cases in assignResultValue() and genPointerSet()
  	* sdcc/support/regression/ports/mos6502/spec.mk
  	  Removed redundant --out-fmt-ihx command line option
  	* sdcc/device/lib/mos6502/_strcpy.s,
  	  sdcc/device/lib/mos6502/_strcmp.s,
  	  sdcc/device/lib/mos6502/_mullong.s,
  	  sdcc/device/lib/mos6502/_mulint.s,
  	  sdcc/device/lib/mos6502/_divuint.s,
  	  sdcc/device/lib/mos6502/_divulong.s,
  	  sdcc/device/lib/mos6502/__memcpy.s:
  	  Move function parameters to overlay segment.
  	* sdcc/device/lib/mos6502/_divsint.s,
  	  sdcc/device/lib/mos6502/_divslong.s,
  	  sdcc/device/lib/mos6502/_modsint.s,
  	  sdcc/device/lib/mos6502/_modslong.s,
  	  sdcc/device/lib/mos6502/_moduint.s,
  	  sdcc/device/lib/mos6502/_modulong.s,
  	  sdcc/device/lib/mos6502/_mulschar.s,
  	  sdcc/device/lib/mos6502/_muluchar.s,
  	  sdcc/device/lib/mos6502/abs.c:
  	  Add assembly implementation of divs, mod, mulchar and abs.
  	* sdcc/src/mos6502/gen.c:
	  Add m6502_unimplemented()
   	* sdcc/src/mos6502/gen.c:
   	   Refactopr genCpl() and genPointerSet()

2022-02-26 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/sdas/asxxsrc/aslist.c:
	  Revert changes in slew() which caused regression failures on z80 ports.
	* sdcc/src/mos6502/ralloc.c:
	  Remove dead code from old ralloc.

2022-02-26 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asgb/gbmch.:
	  Add cycle table from upstream.

2022-02-26 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/SDCCsymt.c,
	  support/regression/tests/bug-3332.c:
	  Fix bugs #3332 and #3333.

2022-02-24 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>
